# ml_service_fastapi_celery_rabbitmq_redis

./: .dockerignore  .env  README.md  docker-compose.yaml  pyproject.toml
.docker/: Dockerfile.worker
src/: Dockerfile  app.py  entrypoint.sh
src/api/routes/: predict.py
src/celery/: celery_init.py  worker.py
src/connections/: broker.py
src/services/: model.py
src/worker/: predict_worker.py
